[v.1.0.0] - build outline pattern

--- a/components/2021-08-01-mdx-blog-post.mdx
+++ b/components/2021-08-01-mdx-blog-post.mdx
@@ -1,6 +1,6 @@
 ---
-slug: mdx-blog-post
-title: MDX Blog Post
+slug: my-custom-components
+title: my-custom-components
 authors: [slorber]
 tags: [docusaurus]
 ---
